--- a/06-Code/03WebClient/TicSell/src/components/Home/Table.css
+++ b/06-Code/03WebClient/TicSell/src/components/Home/Table.css
@@ -10,3 +10,14 @@
     transform: scale(1.05);
 }
 
+.infoClient img {
+    width: 50px;
+    position: relative;
+    border: none;
+    font-size: 1px;
+    transition: color 0.5s, transform 0.2s, background-color 0.2s;
+    outline: none;
+    border-radius: 3px;
+    margin: 0 1px;
+    border: 3px solid transparent;
+}
